# medspa-leadgen

./: .env.example  .gitignore  CHANGELOG.md  ERRORS.md  MEMORY.md  README.md  SPEC.md  WORKLOG-auto-improve.md  cli.py  pyproject.toml  requirements.txt
medspa_leads/: __init__.py  competitor_pricing.py  config.py  dashboard.py  db.py  export.py  pipeline.py
medspa_leads/stages/: discover.py  enrich_booking.py  enrich_contact.py  enrich_site.py  enrich_social.py  hooks.py  score.py
tests/: test_booking_detect.py  test_competitor_pricing.py  test_dashboard.py  test_integration.py  test_score.py
tests/fixtures/: mindbody_booking.html  no_booking.html  vagaro_booking.html
tests/fixtures/pricing/: membership-package.html  offer.html  rendered-menu.html  static-menu.html  unverified-booking.html
